--- a/reserveTime/core/templates/login.restaurant.html
+++ b/reserveTime/core/templates/login.restaurant.html
@@ -90,6 +90,8 @@
         </div>
     <!-- </main> -->
     
+    {% include 'partials/footer.html' %}
+
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
