--- a/reserveTime/core/templates/partials/company-header.html
+++ b/reserveTime/core/templates/partials/company-header.html
@@ -24,7 +24,7 @@
                         {% else %}
                         <img src="{% static 'images/profile2.png' %}" width="50px" alt="Profile photo">
                         {% endif %}
-                        <div class="d-flex flex-direction-column ml-2" style="color: #5B5B5B ;">
+                        <div class="d-flex flex-direction-column ml-2 admin-user-box" style="color: #5B5B5B ;">
                             <span class="mt-1">Welcome</span>
                             <h5 class="bold">{{user.first_name}} {{user.last_name}}</h5>
                         </div>
