--- a/reserveTime/account/templates/user-edit.html
+++ b/reserveTime/account/templates/user-edit.html
@@ -19,12 +19,14 @@
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <title>User Register</title>
 </head>
+
+
 <body id="profile-body">
     
     {% include 'partials/header.html' %}
 
     <!-- <main class="mb-5"> -->
-        <div class="container main-register-container pb-5">
+        <div class="container main-register-container pb-5 ">
             <div class="row">
                 <div class="col-lg-6 mx-auto pt-5">
                     <form method = "POST" enctype="multipart/form-data">
@@ -60,7 +62,17 @@
         
         </div>
     <!-- </main> -->
+
+    <style>
+        footer{
+            bottom: 0;
+            position: fixed;
+            width: 100%;
+        }
+    </style>
     
+    {% include 'partials/footer.html' %}
+
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
