--- a/reserveTime/core/templates/company-menus.html
+++ b/reserveTime/core/templates/company-menus.html
@@ -25,9 +25,9 @@
     {% include 'partials/company-header.html' %}
     {% include 'partials/mobile-menu.html' %}
 
-    <main>
-        <div class="full">
-            <div class="row justify-content-center">
+    <main class="full-h">
+        <div class="full full-h">
+            <div class="row full-h justify-content-center">
                 <div class="col-3 col-lg-2 bg-white p-0 admin-menu-col header-shadow">
                     <div class="admin-menu-box mt-5">
                         <nav>
