--- a/reserveTime/core/templates/reservation-detail.html
+++ b/reserveTime/core/templates/reservation-detail.html
@@ -121,14 +121,46 @@
                                                 <span class="bold mr-2">Total Price : </span>
                                                 <p>{% for total_price in reserve.reservation %}{{total_price.total_price}}{% endfor %} $</p>
                                             </div>
-                                            <div class="d-flex">
-                                                <form action="">
+
+                                            <div class="d-flex align-items-center mb-3">
+                                                <span class="bold">Payment : </span>
+                                                {% if reservation.payment %}
+                                                    <i class="far fa-check-circle ml-2" style="color: green;"></i>
+                                                {% else %}
+                                                    <i class="far fa-times-circle ml-2" style="color: red;" ></i>
+                                                {% endif %}
+                                            </div>
+                                            
+                                            {% if reservation.occasion %}
+                                                <div class="d-flex">
+                                                    <span class="bold">Occasion : </span>
+                                                    <p class="ml-1">{{reservation.occasion}}</p>
+                                                </div>
+                                            {% endif %}
+
+                                            {% if reservation.special_request %}
+                                                <div class="d-flex">
+                                                    <span class="bold">Special Request : </span>
+                                                    <p class="ml-1">{{reservation.special_request}}</p>
+                                                </div>
+                                            {% endif %}
+                                            
+                                            {% if not reservation.accept and not reservation.denied %}
+                                            <div class="d-flex mt-3" id="accept-denied-forms">
+                                                <form action="{% url 'restaurant:reservation-detail' reservation.pk %}" id="acceptReservation">
+                                                    {% csrf_token %}
                                                     <input type="submit" class="mt-2 btn btn-success mr-2" value="Accept">
                                                 </form>
-                                                <form action="">
+                                                <form action="{% url 'restaurant:reservation-detail' reservation.pk %}" id="deniedReservation">
+                                                    {% csrf_token %}
                                                     <input type="submit" class="mt-2 btn btn-danger" value="Denied">
                                                 </form>
                                             </div>
+                                            {% elif reservation.accept %}
+                                                <p class="mt-3 bold" style="color: green;">You have already accepted this reservation</p>
+                                            {% elif reservation.denied %} 
+                                                <p class="mt-3 bold" style="color: red;">You have already denied this reservation</p>  
+                                            {% endif %}
                                         </div>
                                     </div>
                                 {% endfor %}
@@ -199,7 +231,54 @@
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'js/main.js' %}"></script>   
+    <script src="{% static 'js/main.js' %}"></script> 
+    
+    <script>
+        $('#acceptReservation').on('submit', function(e){
+            e.preventDefault()  
+            
+            $.ajax({
+                type: "POST",
+                url: $('#acceptReservation').attr('action'),
+                data:  {
+                    csrfmiddlewaretoken:$('#acceptReservation').find('input[name=csrfmiddlewaretoken]').val(),
+                    form_id : $('#acceptReservation').attr('id')
+                },
+                dataType: 'json',
+                success: function (data) {
+                    $('#accept-denied-forms').html(data.result)
+                    console.log(data);
+                },
+                error: function(data) {
+                    alert("error");
+                    console.log(data);
+                }
+            });
+        });
+
+        $('#deniedReservation').on('submit', function(e){
+            e.preventDefault()  
+            
+            $.ajax({
+                type: "POST",
+                url: $('#deniedReservation').attr('action'),
+                data:  {
+                    csrfmiddlewaretoken:$('#deniedReservation').find('input[name=csrfmiddlewaretoken]').val(),
+                    form_id : $('#deniedReservation').attr('id')
+                },
+                dataType: 'json',
+                success: function (data) {
+                    $('#accept-denied-forms').html(data.result)
+                    console.log(data);
+                },
+                error: function(data) {
+                    alert("error");
+                    console.log(data);
+                }
+            });
+        });
+    </script>
+
     <script>
         $(document).ready(function(){
            
