--- a/reserveTime/core/templates/reservations-list.html
+++ b/reserveTime/core/templates/reservations-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    {% load static %}
+    {% load static custom_tags %}
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
@@ -98,45 +98,44 @@
                             <h3 class="full bottom-border text-center bold pb-3 mb-5">All Reservations to {{user.company.company_name}}</h3>
                             <div class="reservations full">
                                 <div class="name">
-                                    <h3>Upcoming Reservations</h3>
+                                    <h3 class="bold">Upcoming Reservations</h3>
                                 </div>
                                 <div class="content">
                                     <!-- <p>No Upcoming Reservations</p> -->
-                                    {% if reservations %}
-                                        {% for reservation in reservations %}
+                                    {% if upcoming_reservations %}
+                                        {% for reservation in upcoming_reservations %}
                                             <div class="comment-item row">
                                                 <div class="col-12 col-sm-3 comment-author">
-                                                    <div class="reserve-author-profile-img">{{reservation.reservation.user.first_name|capfirst|first}}{{reservation.reservation.user.last_name|capfirst|first}}</div>
+                                                    <div class="reserve-author-profile-img">{{reservation.user.first_name|capfirst|first}}{{reservation.user.last_name|capfirst|first}}</div>
                                                     <div class="comment-author-username"></div>
-                                                    <div class="comment-author-address">{{reservation.reservation.user.first_name|capfirst}} {{reservation.reservation.user.last_name|capfirst}}</div>                           
+                                                    <div class="comment-author-address">{{reservation.user.first_name|capfirst}} {{reservation.user.last_name|capfirst}}</div>                           
                                                 </div>
                                                 <div class="col-12 col-sm-9 mt-2 d-flex padding">
                                                     <div class="col-12 col-lg-12 padding">
                                                         <div class="d-flex">
                                                             <div class="d-flex ">
                                                                 <span class="bold mr-2">Reserve Date : </span>
-                                                                <p>{{reservation.reservation.reserved_date}}</p>
+                                                                <p>{{reservation.reserved_date}}</p>
                                                             </div>
                                                         </div>
                                                         <div class="d-flex">
                                                             <div class="d-flex ">
                                                                 <span class="bold mr-2">Reserve Time : </span>
-                                                                <p>{{reservation.reservation.reserved_time|time:'H:i:s'}}</p>
+                                                                <p>{{reservation.reserved_time|time:'H:i:s'}}</p>
                                                             </div>
                                                         </div>
+                                                        {% get_party_size reservation.table_id as party_size %}
                                                         <div class="d-flex">
                                                             <span class="bold mr-2">Party Size : </span>
-                                                            {% for size in reservation.table_size %}
-                                                                <p> {{size}} people</p>
-                                                            {% endfor %}
+                                                            <p>{{party_size}}</p>
                                                         </div>
                                                         <div class="d-flex justify-content-between">
                                                             <div class="total-price-box d-flex">
                                                                 <span class="bold mr-2">Total Price : </span>
-                                                                <p> {{reservation.reservation.total_price}} $</p>
+                                                                <p> {{reservation.total_price}} $</p>
                                                             </div>
                                                              <div class="d-flex align-items-end pb-2">
-                                                                <a href="{% url 'restaurant:reservation-detail' reservation.reservation.pk %}" class="btn btn-primary">View Detail</a>
+                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-primary">View Detail</a>
                                                             </div>
                                                         </div> 
                                                        
@@ -153,10 +152,56 @@
                             </div>
                             <div class="reservations full">
                                 <div class="name">
-                                    <h3>Past Reservations</h3>
+                                    <h3 class="bold">Past Reservations</h3>
                                 </div>
                                 <div class="content">
-                                    <p>No Past Reservations</p>
+                                    <!-- <p>No Upcoming Reservations</p> -->
+                                    {% if past_reservations %}
+                                        {% for reservation in past_reservations %}
+                                            <div class="comment-item row">
+                                                <div class="col-12 col-sm-3 comment-author">
+                                                    <div class="reserve-author-profile-img">{{reservation.user.first_name|capfirst|first}}{{reservation.user.last_name|capfirst|first}}</div>
+                                                    <div class="comment-author-username"></div>
+                                                    <div class="comment-author-address">{{reservation.user.first_name|capfirst}} {{reservation.user.last_name|capfirst}}</div>                           
+                                                </div>
+                                                <div class="col-12 col-sm-9 mt-2 d-flex padding">
+                                                    <div class="col-12 col-lg-12 padding">
+                                                        <div class="d-flex">
+                                                            <div class="d-flex ">
+                                                                <span class="bold mr-2">Reserve Date : </span>
+                                                                <p>{{reservation.reserved_date}}</p>
+                                                            </div>
+                                                        </div>
+                                                        <div class="d-flex">
+                                                            <div class="d-flex ">
+                                                                <span class="bold mr-2">Reserve Time : </span>
+                                                                <p>{{reservation.reserved_time|time:'H:i:s'}}</p>
+                                                            </div>
+                                                        </div>
+                                                        {% get_party_size reservation.table_id as party_size %}
+                                                        <div class="d-flex">
+                                                            <span class="bold mr-2">Party Size : </span>
+                                                            <p>{{party_size}}</p>
+                                                        </div>
+                                                        <div class="d-flex justify-content-between">
+                                                            <div class="total-price-box d-flex">
+                                                                <span class="bold mr-2">Total Price : </span>
+                                                                <p> {{reservation.total_price}} $</p>
+                                                            </div>
+                                                             <div class="d-flex align-items-end pb-2">
+                                                                <a href="{% url 'restaurant:reservation-detail' reservation.pk %}" class="btn btn-primary">View Detail</a>
+                                                            </div>
+                                                        </div> 
+                                                       
+                                                    </div> 
+                                                    
+                                                </div>
+                                            </div>
+                                        {% endfor %}   
+                                    {% else %}
+                                        <p>No Past Reservations</p>
+                                    {% endif %}
+                                        
                                 </div>
                             </div>
                         </div>
