--- a/reserveTime/core/templates/user-saved-restaurants.html
+++ b/reserveTime/core/templates/user-saved-restaurants.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="{% static 'css/reset.css' %}">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/company-profile.css' %}">
     <link rel="stylesheet" href="{% static 'css/responsive.css' %}">
     <title>My Profile</title>
     
@@ -40,7 +41,7 @@
         </div>
     </div>
 
-    <main>
+    <main class="mb-5">
         <div class="container custom-container">
             <div class="inner-container">
                 <div class="row">
@@ -62,23 +63,29 @@
                             {% for restaurant in saved_restaurants %}
                                 <a href="{% url 'core:company-profile' restaurant.company.pk %}" class="company-item-link">
                                     <div class="company-item row pt-3 pb-3 mb-4 bottom-border">
-                                        <div class="col-3 company-profile-img">
-                                            <img src="{% static 'images/img3.jpg' %}" alt="">
+                                        <div class="col-lg-3 company-profile-img">
+                                            {% if restaurant.company.cover_photo %}
+                                                <img src="{{restaurant.company.cover_photo.url}}" alt="">
+                                            {% else %}
+                                                <img src="{% static 'images/img3.jpg' %}" alt="">
+                                            {% endif %}
+                                           
                                         </div>
-                                        <div class="col-9">
+                                        
+                                        <div class="col-lg-9">
                                             <p class="name bold mb-2 pb-2">{{restaurant.company.company_name}}</p>
                                             <div class="review-box d-flex">
-                                                <div class="stars d-flex">
-                                                    <div class="star"><i class="fas fa-star star-active"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-active"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-active"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-deactive"></i></div>
-                                                    <div class="star"><i class="fas fa-star star-deactive"></i></div>
+                                                <div data-type="{{restaurant.company.company_comment.overall}}" class="stars rating-box d-flex">
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
+                                                    <div class="star"><i class="far fa-star"></i></div>
                                                 </div>
-                                                <p class="review-text ml-2">1875 reviews</p>
+                                                <p class="review-text ml-2">{{restaurant.company.company_comment.all|length}} reviews</p>
                                             </div>
-                                            <div class="d-flex align-items-center">
-                                                <p class="location">Baku, Seaport jdnsakj</p>
+                                            <div class="d-flex align-items-center mt-2 mb-2">
+                                                <p class="location">{{restaurant.company.city_location}}, {{restaurant.company.province_location}}</p>
                                                 <span class="ml-3 booking-count">
                                                     <span>
                                                         <svg width = 20 viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><g fill="none" fill-rule="evenodd"><path d="M15.5,5 C15.2239,5 15,5.223846 15,5.5 L15,6.5 C15,6.77615 15.2239,7 15.5,7 L17.5858,7 L14,10.58578 L12.70711,9.29291 L12.35355,8.93933 C12.15829,8.74408 11.84171,8.74408 11.64645,8.93933 L11.29289,9.29291 L5,15.5858 L5,7 L11.5,7 C11.77614,7 12,6.77615 12,6.5 L12,5.5 C12,5.22385 11.77614,5 11.5,5 L5,5 C3.89543,5 3,5.89542 3,7 L3,17 C3,18.1046 3.89543,19 5,19 L19,19 C20.1046,19 21,18.1046 21,17 L21,14.5 C21,14.2238 20.7761,14 20.5,14 L19.5,14 C19.2239,14 19,14.2238 19,14.5 L19,17 L6.4142,17 L12,11.41422 L13.2929,12.70709 L13.6464,13.06067 C13.8417,13.25592 14.1583,13.25592 14.3536,13.06067 L14.7071,12.70709 L19,8.41422 L19,10.5 C19,10.77615 19.2239,11 19.5,11 L20.5,11 C20.7761,11 21,10.77615 21,10.5 L21,6 L21,5.5 C21,5.223846 20.7761,5 20.5,5 L20,5 L15.5,5 Z" fill="#2D333F" fill-rule="nonzero"></path></g></svg>
@@ -86,14 +93,16 @@
                                                     <span>Booked 34 times today</span>
                                                 </span>
                                             </div>
-                                            <p class="description">
-                                                At ROLLERCOASTERRESTAURANT®, food and beverages are freshly prepared immediately upon 
-                                                receipt of your order. The ingredients used are local ingredients (if possible).</p>
-                                            <div class="d-flex align-items-center">
+                                            <p class="description">{{restaurant.company.description|slice:":255"}}...</p>
+                                            <div class="d-flex align-items-center mt-2">
                                                 <span>TakeOut : </span>
-                                                <div class="ml-3 phone-number d-flex mt-2">
-                                                    <i class="fas fa-phone-alt pr-2"></i> 
-                                                    <p>xxx xxx xx xx</p>
+                                                <div class="ml-3 phone-number d-flex">
+                                                    <i class="fas fa-phone-alt pr-2"></i>
+                                                    {% if restaurant.company.phone_number %}
+                                                        <p>{{restaurant.company.phone_number}}</p>
+                                                    {% else %}
+                                                        <p>xxx xxx xx xx</p>
+                                                    {% endif %}
                                                 </div>
                                             </div>
                                         </div>
@@ -109,11 +118,20 @@
             </div>
         </div>
     </main>
+
+    {% include 'partials/footer.html' %}
+
     
     <script src="{% static 'js/jquery-3.4.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
     <script src="{% static 'js/owl.carousel.min.js' %}"></script>
     <script src="{% static 'js/main.js' %}"></script>
-    
+    <script>
+        for(var index = 0; index < $('.rating-box').length; index++ ){
+            for(var i = 0; i< parseInt($('.rating-box').eq(index).data('type'));i++){
+                $('.rating-box').eq(index).find('i').eq(i).removeClass('far').addClass('fas')
+            }
+        }
+    </script>
 </body>
 </html>
