--- a/reserveTime/core/templates/write-comment.html
+++ b/reserveTime/core/templates/write-comment.html
@@ -22,50 +22,7 @@
 </head>
 <body id="raiting-body">
     
-    <header>
-        <div class="container custom-container header-container shadow">
-            <div class="row justify-content-between">
-                <div class="left side">
-                    <a href="{% url 'core:home' %}">
-                        <img src="{% static 'images/logo.png' %}" width="250px" alt="">
-                    </a>
-                </div>
-                <div class="right side">
-                    <div class="user-profile left-border">
-                        <span> Hi, User <i class="fas fa-chevron-down" id="arrow-down"></i></span>
-                        <div class="custom-drop-down shadow" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Hello, User</span>
-                            <ul>
-                                <li><a href="#">My Profile</a></li>
-                                <li><a href="#">My Dining History</a></li>
-                                <li><a href="#">My Saved Restaurants</a></li>
-                                <li><a href="#">Sign out</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="reserve-table">
-                        <button type="button" class="header-btn"><i class="far fa-calendar"></i></button>
-                        <div class="custom-drop-down p-3" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Upcoming reservations</span>
-                            <p class="pl-2 pr-2">You have no upcoming reservations</p>
-                        </div>
-                    </div>
-                    <div class="notification">
-                        <button type="button" class="header-btn"><i class="far fa-bell"></i></button>
-                        <div class="custom-drop-down shadow p-3" style="display: none;">
-                            <div class="triangle"></div>
-                            <span>Notifications</span>
-                            <p class="pl-2 pr-2">Nothing to see here, you’re all caught up!</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
-        </div>
-       
-    </header>
+    {% include 'partials/header.html' %}
 
     <main class="pt-5 mb-5">
         <div class="container main-raiting-container pb-3" style="padding: 0;">
@@ -161,6 +118,9 @@
             </div>
         </div>
     </main>
+
+    {% include 'partials/footer.html' %}
+
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
