--- a/reserveTime/static/css/responsive.css
+++ b/reserveTime/static/css/responsive.css
@@ -188,6 +188,18 @@
         margin: 0;
         height: 40px;
     }
+    .col-9{
+        flex: 0 0 100%;
+        max-width: 100%;
+    }
+    .main-admin-menus a{
+        width: 100%;
+    }
+
+    .main-admin-menus .link-box{
+        width: 100%;
+        height: 220px;
+    }
 }
 
 @media (max-width : 577px){
@@ -222,10 +234,7 @@
     .name, .content {
         padding: 10px;
     } 
-    .link-box{
-        width: 350px;
-        height: 200px;
-    }
+    
     .company-menu-block {
         padding: 0px 10px;
     }  
@@ -249,6 +258,51 @@
 
     .company-admin-container{
         max-width: 100%;
+    }
+    .username-box{
+        padding: 15px 35px;
+    }
+    .username-box img{
+        width: 50px;
+        height: 50px;
+        margin-top: 0px;
+    }
+    .username-box h2{
+        font-size: 20px;
+    }
+    .profile-menu-list a{
+        font-size: 15px;
+    }
+    .reservations{
+        border-radius: 0;
+        margin-bottom: 30px;
+    }
+
+    .reservations .name h3{
+        font-size: 18px;
+        font-weight: bold;
+        margin: 5px;
+        text-align: center;
+    }
+    .col-lg-10{
+        padding: 0;
+    }
+    .company-item{
+        border: none;
+        border-radius: 0;
+    }
+    .admin-user-box{
+        display: none !important;
+    }
+    .user-item{
+        border-radius: 10px;
+        padding-bottom: 5px;
+    }
+    .user-item p{
+        margin-bottom: 3px;
+    }
+    .comment-author{
+        margin-bottom: 10px;
     }
 }
 
