--- a/reserveTime/static/css/style.css
+++ b/reserveTime/static/css/style.css
@@ -1,5 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
 body{
     background-color: #f7f7f7;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .custom-container{
@@ -317,7 +320,7 @@ h3{
 }
 footer{
     position: relative;
-    background-color: #2d333f;
+    background-color: #45526e;
     padding: 20px 0;
 }
 
@@ -360,15 +363,15 @@ footer{
     border-radius: 20px;
 }
 
-.fa-facebook-f,
-.fa-google-plus-g{
+.btn-google .fa-google-plus-g,
+.btn-facebook .fa-facebook-f    {
     font-size: 22px;
     color: blue;
     border: 1px solid;
     padding: 5px 10px;
     border-radius: 5px;
 }
-.fa-google-plus-g{
+.btn-google .fa-google-plus-g{
     color: #B9121B;
 }
 .btn-social{
@@ -388,7 +391,8 @@ footer{
 }
 .company-profile-img img{
     width: 100%;
-    height: 160px;
+    height: 100%;
+    object-fit: cover;
 }
 .company-item .name{
     padding: 0;
@@ -428,7 +432,7 @@ footer{
 }
 
 #company-admin-body{
-    background-color: #E9E9E9;
+    background-color: #F2F4F4;
 }
 .color-w{
     color: white !important;
@@ -436,7 +440,6 @@ footer{
 
 .photo-list-item{
     width: 100%;
-    margin-bottom: 15px;
     height: 150px;
     object-fit: cover;
 }
@@ -653,7 +656,7 @@ box-shadow: 0px 3px 19px -7px rgba(0,0,0,0.75);
 }
 .company-item{
     border: 1px solid #ccc;
-    border-radius: 15px;
+    border-radius: 8px;
     margin-top: 10px;
     color: #000;
 }
@@ -752,4 +755,40 @@ canvas{
     -webkit-box-shadow: 9px -1px 57px -16px rgba(255,255,255,0.73);
     -moz-box-shadow: 9px -1px 57px -16px rgba(255,255,255,0.73);
     box-shadow: 9px -1px 57px -16px rgba(255,255,255,0.73);
+}
+
+footer{
+    color: #fff;
+}
+
+footer a{
+    color: #fff;
+}
+
+footer a:hover{
+    text-decoration: none;
+    color: rgb(224, 222, 222);
+}
+
+footer .btn-floating{
+    padding: 0;
+    margin: 10px;
+    vertical-align: middle;
+    cursor: pointer;
+    border-radius: 50%;
+    -webkit-box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18), 0 4px 15px 0 rgba(0,0,0,0.15);
+    box-shadow: 0 5px 11px 0 rgba(0,0,0,0.18), 0 4px 15px 0 rgba(0,0,0,0.15);
+    -webkit-transition: all .2s ease-in-out;
+    transition: all .2s ease-in-out;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+.scroll-y{
+    max-height: 350px;
+    overflow-y: scroll;
 }
